[package]
name = "calculations_and_operations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "52.0.0"
polars = { version = "0.41.2", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exr = "1.72.0"